[package]
name = "actix-web-example"
version = "0.1.0"
authors = ["Aliaksandr Rahalevich <saksmlz@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0.0-rc"
futures03 = { package = "futures-preview", version = "0.3.0-alpha.16", features = ["compat"] }

tokio = { git = "https://github.com/tokio-rs/tokio", default-features = false, features = ["io", "codec", "timer"] }

actix_web_async_compat = { git = "https://github.com/saks/actix_web_async_compat.git" }
serde = { version = "1.0", features = ["derive"] }